修改MD部分描述